--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="game">
-    <div class="row">
-      <div class="cell" data-cell="0"></div>
-      <div class="cell" data-cell="1"></div>
-      <div class="cell" data-cell="2"></div>
+  <div>
+    <div id="game">
+      <div class="row">
+        <div class="cell" data-cell="0"></div>
+        <div class="cell" data-cell="1"></div>
+        <div class="cell" data-cell="2"></div>
+      </div>
+      <div class="row">
+        <div class="cell" data-cell="3"></div>
+        <div class="cell" data-cell="4"></div>
+        <div class="cell" data-cell="5"></div>
+      </div>
+      <div class="row">
+        <div class="cell" data-cell="6"></div>
+        <div class="cell" data-cell="7"></div>
+        <div class="cell" data-cell="8"></div>
+      </div>
     </div>
-    <div class="row">
-      <div class="cell" data-cell="3"></div>
-      <div class="cell" data-cell="4"></div>
-      <div class="cell" data-cell="5"></div>
-    </div>
-    <div class="row">
-      <div class="cell" data-cell="6"></div>
-      <div class="cell" data-cell="7"></div>
-      <div class="cell" data-cell="8"></div>
-    </div>
+    <div id="status"></div>
   </div>
-  <div id="status"></div>
   <script src="game.js"></script>
 </body>
 </html>
