--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     </div>
     <div id="status"></div>
   </div>
-  <script src="game.js"></script>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
